tests/neg/transparent-inline-heuristic-note.check
-- [E007] Type Mismatch Error: tests/neg/transparent-inline-heuristic-note.scala:7:17 ----------------------------------
7 |val x: String = s(Zero) // error
  |                ^^^^^^^
  |                Found:    Succ[Nat]
  |                Required: String
  |
  |                Note: `method s` is transparent inline, but its precise type may not be available here.
  |                This can happen when:
  |                - It is used inside another inline body.
  |                - Its result type depends on another inline expansion or on an inline parameter.
  |
  | longer explanation available when compiling with `-explain`
